# wid

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.codex/: INSTALL.md
.github/workflows/: ci.yml
docs/: README.codex.md
docs/superpowers/plans/: 2026-03-24-wid-mvp.md
docs/superpowers/specs/: 2026-03-24-wid-initial-design.md
skills/wid/: SKILL.md
src/: cli.rs  main.rs
src/commands/: add.rs  archive.rs  done.rs  edit.rs  focus.rs  mod.rs  note.rs  now.rs  open.rs  rm.rs  show.rs  tag.rs
src/interactive/: done_picker.rs  mod.rs
src/log/: format.rs  mod.rs  model.rs  parser.rs  paths.rs  store.rs
tests/: cli_add.rs  cli_archive.rs  cli_done.rs  cli_edit.rs  cli_focus.rs  cli_note.rs  cli_now.rs  cli_open.rs  cli_rm.rs  cli_show.rs  cli_tag.rs  parser.rs
