[package]
name = "wid"
version = "0.3.0"
edition = "2024"
description = "A CLI for keeping focus across agent-driven context switches"
license = "MIT"
repository = "https://github.com/yasuhito/wid"
keywords = ["cli", "productivity", "markdown", "notes", "agent"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
md5 = "0.8"
ratatui = "0.29"
rustyline = "17"
serde_json = "1"
